--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 /* styles go here */
+
+.container {
+  margin: 10px 0 20px;
+  padding-bottom: 0;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+#work {
+  margin-bottom: 10px;
+}
